<resources>
    <string name="app_name">Memogram</string>
    <string name="logo">Logo</string>
    <string name="view_collection">View Collection</string>
    <string name="post">Post</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_post">Create Post</string>
    <string name="upload_image">Upload an image</string>
    <string name="write_caption">WRITE CAPTION</string>
    <string name="write_title">WRITE TITLE</string>
    <string name="add_tags">ADD TAGS</string>
    <string name="audio">Audio</string>
    <string name="play_back">Play Back</string>
    <string name="select_date">SELECT DATE</string>
    <string name="record_audio">RECORD AUDIO</string>
    <string name="audio_playback">AUDIO PLAYBACK</string>
    <string name="no_tag">none</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="manage_family">Manage Family</string>
    <string name="leave_family">Leave Family Group</string>
    <string name="title">Title</string>
    <string name="posted_date">Posted Date</string>
    <string name="play_audio">Play Audio</string>
    <string name="description">Description</string>

    <string name="settings">Settings</string>
    <string name="generate_one_time_code">Generate One-Time Code</string>

    <string name="toast_image_required">Please select an image first</string>
    <string name="toast_creating_post">Creating post…</string>
    <string name="toast_post_upload_failed">Failed to upload post. Please try again.</string>
    <string name="toast_recording_started">Recording started</string>
    <string name="toast_recording_stopped">Recording stopped</string>
    <string name="toast_recording_failed">Failed to start recording</string>
    <string name="toast_playback_failed">Failed to play audio</string>
    <string name="toast_record_audio_first">Record audio first</string>

    <string name="post_upload_success">Post uploaded successfully.</string>
    <string name="post_upload_fail">Failed to upload post.</string>

    <string name="submit">Submit</string>
    <string name="one_time_code">one-time code</string>
    <string name="join_group">Join Group</string>
    <string name="group_name">Group Name</string>
    <string name="create_group">Create Group</string>
    <string name="welcome">Welcome</string>
    <string name="close">Close</string>
    <string name="fullscreen_image">Fullscreen Image</string>
    <string name="sort_by_user">Sort By User</string>
    <string name="sort_by_tag">Sort By Tag</string>
    <string name="view_collection_drop">This is where you can view collections! Press here to learn more.</string>
    <string name="view_collection_more_drop">Posts can be filtered by tag or sorted by the user. Please press into each user and folder to view.</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="name">Name</string>
    <string name="current_password">Current Passsword</string>
    <string name="select_role">Select Role</string>
    <string name="role">Role</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="group_management">Group Management</string>
    <string name="enter_one_time_code">Enter One-Time Code</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="user_management">User Management</string>
    <string name="delete">Delete</string>

    <string name="home_drop">Welcome to Memogram! Press here to learn the basics.</string>
    <string name="home_more_drop">This is the home screen. Here, you can view posts from your family members. Each posts can contain voice recording and or a description. Highlighted posts are posts that you have not viewed. Please press on them to indicate that you have viewed the post. You may also press the view collections button locate in the top right of the screen to filter through posts.</string>
    <string-array name="Roles">
        <item>Son</item>
        <item>Daughter</item>
        <item>Grandson</item>
        <item>Granddaughter</item>
        <item>Nephew</item>
        <item>Niece</item>
        <item>Uncle</item>
        <item>Aunt</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Cousin</item>
        <item>Friend</item>
        <item>Other</item>
        <item>Grandpa</item>
        <item>Grandma</item>
        <item>Dad</item>
        <item>Mom</item>
        <item>Great Grandpa</item>
        <item>Great Grandma</item>
    </string-array>
</resources>
