<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".ui.fragment.GroupSelectionFragment"
    android:elevation="2dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:letterSpacing="0.4"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:fontFamily="@font/nunito"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="185dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:letterSpacing="0.2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/red"
        android:textStyle="bold"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/create_group_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/create_group_btn"
        android:letterSpacing="0.2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/create_group"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/join_group_btn"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/join_group"
        android:textStyle="bold"
        android:letterSpacing="0.2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_group_btn"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/group_name_input"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/group_name"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_group_btn" />

    <!-- One-Time Code Input -->
    <EditText
        android:id="@+id/one_time_code_input"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/one_time_code"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_group_btn" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:letterSpacing="0.2"
        android:textStyle="bold"/>



</androidx.constraintlayout.widget.ConstraintLayout>