<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainActivity"
    android:background="@color/grey">

    <!-- Top Block Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_block"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/red"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Return to Main Button  -->
        <Button
            android:id="@+id/settings_to_main_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/white"
            android:text="@string/greater_than"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Settings Header  -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- LinearLayout containing Settings Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/top_block">

        <!-- Generate One-Time Code Button  -->
        <Button
            android:id="@+id/generate_one_time_code_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/generate_one_time_code"
            android:textColor="@color/blue" />

        <!-- Manage Family Button  -->
        <Button
            android:id="@+id/manage_family_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/manage_family"
            android:textColor="@color/blue" />

        <!-- Leave Family Button  -->
        <Button
            android:id="@+id/leave_family_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/leave_family"
            android:textColor="@color/blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
