<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".ui.MainActivity"
    android:layout_marginTop="65dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/dark_green">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:letterSpacing="0.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito"
                android:textAllCaps="true"
                android:text="@string/create_post"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/yellow"
                    android:contentDescription="@string/upload_image"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_upload" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/write_title"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/dark_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ptsans"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/dark_green" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/write_caption"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/dark_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddCaption"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ptsans"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/add_tags"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/dark_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ptsans"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/DatePickerButton"
                android:layout_width="350dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/blue"
                android:drawableLeft="@drawable/ic_calendar"
                android:textStyle="bold"
                android:drawableTint="@color/yellow"
                android:fontFamily="@font/ptsans"
                android:text="@string/select_date"
                android:letterSpacing="0.2"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="8dp"
                app:elevation="4dp"
                app:strokeColor="@color/dark_green"
                app:strokeWidth="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Audio"
                    android:layout_width="165dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/record_audio"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ptsans"
                    app:cornerRadius="8dp"
                    app:elevation="4dp"
                    android:textSize="14sp"
                    android:letterSpacing="0.2"
                    app:strokeColor="@color/dark_green"
                    android:drawableLeft="@drawable/ic_record_audio"
                    android:drawableTint="@color/yellow"
                    android:textStyle="bold"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/PlayBack"
                    android:layout_width="165dp"
                    android:layout_height="75dp"
                    android:backgroundTint="@color/blue"
                    android:fontFamily="@font/ptsans"
                    android:text="@string/audio_playback"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp"
                    app:elevation="4dp"
                    android:textSize="14sp"
                    app:strokeColor="@color/dark_green"
                    app:strokeWidth="1dp"
                    android:letterSpacing="0.2"
                    android:drawableLeft="@drawable/ic_playback"
                    android:textStyle="bold"
                    android:drawableTint="@color/yellow" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Post"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/ptsans"
                android:text="@string/post"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="12dp"
                android:drawableLeft="@drawable/ic_upload"
                android:drawablePadding="10dp"
                android:drawableTint="@color/yellow"
                android:paddingStart="60dp"
                android:textStyle="bold"
                android:paddingEnd="60dp"
                android:letterSpacing="0.2"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>