<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
    android:background="@color/dark_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:letterSpacing="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/edit_profile_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.481" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="125dp"
            android:src="@mipmap/cat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/change_profile_picture_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/nunito"
            android:padding="15dp"
            android:text="@string/change_profile_picture"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <EditText
            android:id="@+id/username"
            android:layout_width="275dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="10dp"
            android:drawableTint="@color/blue"
            android:fontFamily="@font/nunito"
            android:hint="@string/name"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_profile_picture_btn" />

        <EditText
            android:id="@+id/email"
            android:layout_width="275dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/blue"
            android:fontFamily="@font/nunito"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="275dp"
            android:layout_height="55dp"
            android:layout_marginTop="140dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_edit"
            android:drawablePadding="10dp"
            android:drawableTint="@color/blue"
            android:fontFamily="@font/nunito"
            android:hint="@string/current_password"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <AutoCompleteTextView
                android:id="@+id/role"
                android:layout_width="275dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_role"
                android:drawablePadding="10dp"
                android:drawableTint="@color/blue"
                android:fontFamily="@font/nunito"
                android:inputType="none"
                android:paddingStart="10dp"
                android:text="@string/select_role"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="275dp"
            android:layout_height="55dp"
            android:layout_marginTop="68dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/nunito"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>